--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 /GM_0423_BaseDX/x64
+/.vs
+/GM_FrameWork/GM_0423_BaseDX/x64
+/GM_FrameWork/GM_0423_BaseDX/x64
+/GM_FrameWork/GM_0423_BaseDX/x64
+/GM_FrameWork/GM_0423_BaseDX/x64
