--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 /GM_0423_BaseDX/x64
 /.vs
+/x64
+/GM_0423_BaseDX/x64
 /GM_FrameWork/GM_0423_BaseDX/x64
 /GM_FrameWork/GM_0423_BaseDX/x64
 /GM_FrameWork/GM_0423_BaseDX/x64
 /GM_FrameWork/GM_0423_BaseDX/x64
+/GM_FrameWork/GM_0423_BaseDX/x64/Debug
+/GM_FrameWork/GM_0423_BaseDX
